
* Got headless game server to be able to pick games, and have a mini-ui for hosting and for during the game. (veqryn)

* Got headless game server to be able to host minimap, with the game screen headless. (veqryn)

* First pass at setting up framework for a headless game server. (veqryn)

* Fixed bug causing Random Territory Start delegate to fail in online games due to requesting dice too quickly. (veqryn)

* Updating Great War ww1 map and xml, to improve options and balance. (veqryn)

* Updating packaged JRE to Java 7 update 21 for x86. (veqryn)

* Made fuelCost no longer charge for allied air dependants, paratroopers, and owned air on owned fighters not making an attack. (veqryn)

* Created new game option property, "Use Fuel Cost", which will control if we charge for fuel in our movement. (veqryn)

* Added an option to turn off the end of turn report, into the game menu bar. (veqryn)

* Changed engine preference for max memory into a "system.ini" file, that way a user can delete or reinstall TripleA if they screw up. (veqryn)

* Created new engine preference option to set the maximum memory used for triplea, for joining, hosting, and also an option to have triplea always restart with higher memory maximum. (veqryn)

* Created new option in engine preferences to show engine log console, and also had the console show current memory usage. (veqryn)

* Reducing maximum memory to 896mb, down from 1024mb, in order to stop these errors from happening, and not allowing engine to add 20% to this when joining online games or hosting. (veqryn)

* Figuring out some user's Java jvm's and/or the JRE included with triplea, only allow up to xmx 1024mb of memory maximum, and that the program completely fails when going over this limit, often causing the user to be unable to join or host games online. (veqryn & diaz)

* Fixing some lock not held errors. (veqryn)

* Fixed bug causing triggered notifications to not use local images when shown on a client computer. (veqryn)
