@@ -26,5 +26,5 @@ import games.strategy.util.Version;
  */
 public class EngineVersion
 {
-	public static final Version VERSION = new Version(1, 7, 0, 1);
+	public static final Version VERSION = new Version(1, 7, 0, 3);
 }
