@@ -11,6 +11,8 @@ Changes for 1.7.0.3
 
 * First pass at setting up framework for a headless game server. (veqryn)
 
+* Preventing AA units with maxRoundsAA from getting removed early from battle. (veqryn)
+
 * Fixed bug causing Random Territory Start delegate to fail in online games due to requesting dice too quickly. (veqryn)
 
 * Updating Great War ww1 map and xml, to improve options and balance. (veqryn)
